--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "graphql": "^15.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
     "web-vitals": "^1.0.1"
